# scpcb-web-port

./: .gitattributes  LICENSE  README.md  build_game_webgpu.py
.github/workflows/: build.yml
blitz3d-ng/: CMakeLists.txt
blitz3d-ng/src/modules/bb/graphics.gl/: CMakeLists.txt  canvas.cpp  canvas.h  default.glsl  graphics.gl.cpp  graphics.gl.h
blitz3d-ng/src/runtime/: CMakeLists.txt
engine/: web_compat.cpp
tools/: fetch_blitz3d_ng_deps.py  headless_test.mjs  pack_monolith.py  package-lock.json  package.json
upstream-scpcb/: .gitignore  .gitmodules  Achievements.bb  Changelog.txt  Credits.txt  DevilParticleSystem.bb  Difficulty.bb  Dreamfilter.bb  Game.bb  KeyName.bb  Localization.bb  Main.bb  MapSystem.bb  Menu.bb  ModManager.bb  NPCs.bb  OverlapResolver.bb  Particles.bb  README.md  StrictLoads.bb  Subtitles.bb  UpdateEvents.bb  WebShims.bb  defaults.ini  steam_appid.txt
upstream-scpcb/Data/: NPCBones.ini  SCP-294.ini  SCP-294Keyboard.ini  events.ini  items.ini  map.ini  rooms.ini  strings.ini  subtitles.ini  subtitles_captions.ini  voices.ini
upstream-scpcb/GFX/items/: 427.b3d  INVbdc.ae  bdc.b3d  bdc.tx  happy.b3d
upstream-scpcb/GFX/map/: ContDoorLeft.x  ContDoorRight.x  Door01.x  gatea_opt.rmesh  gateaentrance_opt.rmesh  lockroom_ez.rmesh  machineroom_opt.rmesh  miscsigns3.ae  mt_generator.rmesh  pocketdimension3.b3d  room079.rmesh  room1archive_opt.rmesh  room205_opt.rmesh  room2Ctunnel_opt.rmesh  (+8 more)
upstream-scpcb/Map Creator/: StartMapCreator.bat  options.ini  window3d.bb
upstream-scpcb/Userlibs/: Blitzcord.decls
web-shell/: core-pre.js  index.html
(+180 files in other folders)
